# greentech-intelligence

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile.api  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.snapshot.20260418.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml  docs.yml
.playwright-mcp/: page-2026-04-12T21-04-24-290Z.yml  page-2026-04-12T21-04-59-185Z.yml  page-2026-04-12T21-09-25-102Z.yml  page-2026-04-12T21-14-59-555Z.yml  page-2026-04-12T21-15-13-728Z.yml  page-2026-04-12T21-16-07-198Z.yml  page-2026-04-12T21-16-48-800Z.yml  page-2026-04-12T21-20-07-484Z.yml  page-2026-04-12T21-21-26-916Z.yml  page-2026-04-13T00-40-34-175Z.yml  page-2026-04-13T00-42-04-972Z.yml  page-2026-04-13T01-01-22-609Z.yml  page-2026-04-13T01-01-38-656Z.yml  page-2026-04-13T01-02-42-597Z.yml  page-2026-04-13T01-02-53-876Z.yml  page-2026-04-13T01-03-03-946Z.yml  page-2026-04-13T01-04-54-593Z.yml  page-2026-04-13T01-05-59-281Z.yml  page-2026-04-13T01-06-27-943Z.yml  page-2026-04-13T01-06-47-620Z.yml  page-2026-04-13T01-07-27-423Z.yml  page-2026-04-13T01-07-58-399Z.yml  page-2026-04-13T01-08-11-285Z.yml  page-2026-04-13T01-08-18-887Z.yml  page-2026-04-13T01-10-46-521Z.yml  page-2026-04-13T01-12-19-123Z.yml  page-2026-04-13T01-13-21-046Z.yml  page-2026-04-13T01-17-11-818Z.yml  page-2026-04-13T01-17-51-917Z.yml  page-2026-04-14T10-09-28-960Z.yml  page-2026-04-14T10-42-17-278Z.yml  page-2026-04-14T10-42-48-770Z.yml  page-2026-04-14T10-43-19-796Z.yml  page-2026-04-14T10-45-16-008Z.yml  page-2026-04-14T10-45-41-837Z.yml  page-2026-04-14T10-46-24-586Z.yml  page-2026-04-14T10-47-34-563Z.yml  page-2026-04-14T10-47-51-973Z.yml  page-2026-04-14T10-47-56-172Z.yml  page-2026-04-14T10-48-31-656Z.yml  (+14 more)
audit_crossref/: classifications.json
audit_greenit/: false_positives.json
config/alertmanager/: alertmanager.discord.example.yml  alertmanager.yml
config/grafana/provisioning/dashboards/: dashboards.yml  metier-greentech.json  performance-systeme.json  pipeline-training.json
config/loki/: loki-config.yml  promtail-config.yml
config/prometheus/: alert-rules.yml  prometheus.yml
data/: .gitignore  README.md  golden_dataset.csv.dvc  golden_dataset_augmented.csv.dvc
docs/: ACCESSIBILITE_DOCUMENTATION.md  ACTIONS_MANUELLES_ETAPE1.md  ANNOTATION_MANUELLE.md  BENCHMARK_BRUT_2026-04.md  BENCHMARK_FINAL_2026-04.md  BENCHMARK_SERVICES_IA.md  CHECKLIST_FIN_ETAPE.md  CHECKLIST_SUIVI.md  CHOIX_DEBERTA.md  ETAT_AVANCEMENT.md  GESTION_KANBAN_GITHUB.md  MODEL_CARD.md  PLAN_ETAPES.md  PLAYBOOK_MAINTENANCE.md  PROCEDURE_MAJ_MODELE.md  PROCEDURE_MAJ_ROCM.md  REGISTRE_RGPD.md  ROCM_MIGRATION_LOG.md  SELECTION_CHAMPION_2026-04.md  SPECIFICATIONS_DATA.md  SPECIFICATIONS_TECHNIQUES.md  Sources_Données.md  conf.py  greentech_intelligence.loo  index.md  pipeline_run_2026-04-16.md
docs/_static/: a11y-fixes.js  a11y-overrides.css
docs/veille/: 2026-03-03_synthese.md  2026-03_rapport_mensuel.md  PROMPT_PERPLEXITY.md  README.md  TEMPLATE_synthese_hebdomadaire.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.docs.config.ts  tsconfig.app.json  vite.config.ts
frontend/a11y-docs-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/backgrounds/: AuroraHero.tsx
frontend/src/components/layout/: CommandPalette.tsx  Footer.tsx  Header.tsx  Layout.tsx  LeafCircuitLogo.tsx  ModeToggle.tsx
frontend/src/components/ui/: animated-grid-pattern.tsx  border-beam.tsx  dialog.tsx  glow-badge.tsx  meteors.tsx  metric-card.tsx  status-indicator.tsx  textarea.tsx  typing-animation.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: ArticleDetailPage.tsx  DashboardPage.tsx  LoginPage.tsx
frontend/src/types/: api.ts
frontend/tests/: accessibility.spec.ts  docs-accessibility.spec.ts
logs/: .gitkeep
models/: production.dvc
scripts/: apply_agent_classifications.py  apply_audit_corrections.py  augment_positives.py  auto_annotate_dataset.py  auto_correct_pure_sources.py  benchmark_baseline.py  benchmark_baseline_rigorous.py  benchmark_models.py  classify_candidates.py  collect_targeted.py  create_annotation_dataset.py  export_golden_dataset.py  export_training_emissions.py  generate_classification_summaries.py  generate_green_summaries.py  manual_annotation_helper.py  rebuild_qwen3_ensemble.py  reclassify_borderline_v2.py  retrain_pipeline.py  seed_render_db.py  seed_test_data.py  smoke_e2e_analyze.py  smoke_train_cv.py  ties_merge_qwen3_manual.py  train_p4_hybrid.py  validate_end_to_end.py  verify_infrastructure.py
scripts/sql/: cleanup_rgpd.sql  init.sql  migration_001_resume_ecologique.sql  migration_002_b2_sources_config.sql  migration_003_b2_3_spiders.sql  migration_004_annotation_manuelle.sql
src/greentech/: __init__.py  config.py
src/greentech/ai/: __init__.py
src/greentech/ai/mlops/: __init__.py  baseline_rigorous.py  baseline_tracking.py  calibration.py  carbon.py  monitoring.py  prometheus_metrics.py  robustness.py  tracking.py  training_emissions_exporter.py  validation.py
src/greentech/ai/models/: __init__.py  baseline.py  classifier.py  inference.py  training.py
src/greentech/ai/services/: __init__.py  classification_summarizer.py  classifier_llm.py  llm_dispatcher.py  llm_local.py  summarizer.py
src/greentech/api/: __init__.py  celery_app.py  dependencies.py  main.py  tasks.py
src/greentech/api/routes/: __init__.py  analyze.py  articles.py  auth.py  stats.py
src/greentech/api/schemas/: __init__.py  analysis.py  article.py  stats.py  (+1 more)
src/greentech/data/: __init__.py
src/greentech/utils/: logger.py
tests/: conftest.py
tests/api/: test_analyze.py  test_articles.py  test_auth.py  test_stats.py
tests/unit/: test_stratification.py
tests/unit/ai/: test_back_translator.py  test_calibration.py  test_class_weight.py  test_data_leakage_augmentation.py  test_ensemble.py  test_fold_drift.py  test_robustness.py
tests/unit/data/: __init__.py
(+33 files in other folders)
